Tue Oct 7 12:06:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcube.c, gtkgame.c: Make sure hint window is correct size in new layout.
	* gtkprefs.c, drawboard3d.c: Small memory fix.

Mon Oct 06 20:42:21 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkcube.c: bring output of double and take analysis in line

Mon Oct 06 19:37:17 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* analysis.c, analysis.h, formatgs.c, gnubgmodule.c, sgf.c:
	  change categorization of doubles (2 categories each for missed and
	  wrong doubles, separator is cash point)

Mon Oct 06 18:34:47 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtktheory.c: fix typo (bg rate value range in theory window)

Sat Oct  4 16:40:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (UpdateMoveList): ensure that the selectec
	move is highlighted.

Fri Oct  3 20:49:58 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c: store analysis performed by computer player
	where possible.

Fri Oct  3 19:17:29 2003  Joern Thyssen  <jth@gnubg.org>

	* progress.c (TextRolloutProgress): no newline after
	\r.

Fri Oct  3 19:08:51 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): argh, it should be
	bg <= 1.0-g.
	(reported by Massimiliano Maini)

Thu Oct  2 20:48:23 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (errorRateMP): remove extra digit in 
	error rates.
	(suggested by olivier croisille)

Thu Oct  2 20:21:21 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSGGGame): ensure that resignations are in the
	range 1 (normal) to 3 (backgammon)
	(bug #5641 reported by Bert Van Kerckhove)

Thu Oct  2 19:57:56 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (printTextBoard): assign asz[7] and asz[8] if
	USE_TIMECONTROL
	(reported by Jeff White)

Thu Oct  2 19:37:15 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): ensure that bg <= g.

Thu Oct 2 10:59:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	play.c, gnubg.c: Added first move command
